impl admin view

--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -61,9 +61,9 @@
 <br>
 <p style="margin:0 5px">
 	<div class="row">
-		<div class="d-none d-sm-block">
-			<%= @plan.html_content.html_safe %>
-		</div>
+<!-- 		<div class="d-none d-sm-block">
+			<% @plan.html_content.html_safe %>
+		</div> -->
 		<div class="d-sm-block d-sm-done">
 			<%= @plan.html_content.gsub("col-4", "col-12").html_safe %>
 		</div>
