--- a/app/views/remainrooms/index.html.erb
+++ b/app/views/remainrooms/index.html.erb
@@ -3,10 +3,10 @@
 		<div class="col-3">
 			<ul class="list-group">
 				<li class="list-group-item active"><a href="/remainrooms" style="color:white">ホーム</a></li>
-				<li class="list-group-item list-group-item-action"><a href="/reservations">予約管理</a></li>
+				<li class="list-group-item list-group-item-action"><a href="/reservations">プラン管理</a></li>
 				<li class="list-group-item list-group-item-action">売上管理</li>
-				<li class="list-group-item list-group-item-action">プラン管理</li>
-				<li class="list-group-item list-group-item-action">記事管理</li>
+				<li class="list-group-item list-group-item-action"><a href="/plan/admin_index">プラン管理</a></li>
+				<li class="list-group-item list-group-item-action"><a href="/article/admin_index">記事管理</a></li>
 			</ul>
 		</div>
 		<div class="col-9">
