--- a/app/views/common/_navbar.en.html.erb
+++ b/app/views/common/_navbar.en.html.erb
@@ -31,6 +31,15 @@
         </div>
       </li>
       <% end %>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Language
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/ja/">日本語</a>
+          <a class="dropdown-item" href="/en">English</a>
+        </div>
+      </li>
     </ul>
     <!--
     <form class="form-inline my-2 my-lg-0">
