--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,13 +3,13 @@
 <head>
   <title>HotelApp</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width,initial-scale=2">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body style="zoom:0.9">
 	<div id="fb-root"></div>
 	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0" nonce="klzKwDZP"></script>
 	<%= render "common/navbar" %>
