--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -69,6 +69,7 @@
 			</tr>
 		</table>
 		<h4 style="border-left:7px solid #4689FF; border-bottom:2px solid #4689FF;padding:11px;">予約管理</h4>
+		<p></p>
 		<div class="card" style="padding:20px">
 			<h3>検索する</h3>
 			<%= form_tag("/reservations/", method: :get) do %>
@@ -98,6 +99,11 @@
 				<%= submit_tag "調べる", :class => "btn btn-info" %>
 			<% end %>
 		</div>
+		<% if params[:start_date] != nil || params[:end_date] != nil %>
+			<p style="margin-top:20px;padding:10px;color:white;background-color:blue;">
+				<strong><%= params[:start_date] %> から <%= params[:end_date] %> の検索結果</strong>
+			</p>
+		<% end %>
 		<table class="table" style="margin-top:30px">
 			<thead>
 				<td>ID</td>
